<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Main">

    <Button
        android:id="@+id/btnAcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/Acoes" />

    <Button
        android:id="@+id/btnTransacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAcao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Transacoes" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnTransacao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Sobre" />

</RelativeLayout>
